Mon Dec 30 14:21:30 CET 2013
Microlinux Enterprise Desktop 14.0 32-bit released! This is an LTS release,
which means packages will be maintained for as long as the underlying Slackware
system is officially supported.

MLED 14.0 32-bit provides the following extra software:

AP
|-- cdlabelgen
|-- p7zip
|-- recode
|-- sbopkg
`-- unrar

D
|-- acpica
|-- gc
|-- jdk
|-- lua
|-- numpy
|-- orc
|-- perl-cairo
|-- perl-event
|-- perl-extutils-depends
|-- perl-extutils-pkgconfig
|-- perl-glib
|-- perl-gtk2
|-- perl-libintl
|-- perl-pango
`-- scons

GNOME
|-- atkmm
|-- brasero
|-- cairomm
|-- dconf
|-- evince
|-- gdm
|-- glibmm
|-- gnote
|-- goocanvas
|-- gthumb
|-- gtkmm
|-- libgnomecanvas
|-- libgnomecups
|-- libgnomeprint
|-- libgnomeprintui
|-- libsigc++
|-- libunique
|-- mm-common
|-- pangomm
|-- pygoocanvas
`-- totem-pl-parser

L
|-- BeautifulSoup
|-- cryptopp
|-- enca
|-- gsl
|-- imlib2
|-- jbig2dec
|-- libburn
|-- libevent
|-- libisoburn
|-- libisofs
|-- lxml
|-- protobuf
|-- pysetuptools
|-- pyxdg
|-- tolua++
`-- wxGTK

LOCALE
|-- mozilla-firefox-l10n
|-- mozilla-thunderbird-l10n
`-- openoffice-langpack

MULTIMEDIA
|-- a52dec
|-- cddb-py
|-- celt
|-- dirac
|-- faac
|-- faad2
|-- ffmpeg
|-- flash-player-plugin
|-- frei0r
|-- gsm
|-- gst-ffmpeg
|-- gst-plugins-bad
|-- gst-plugins-ugly
|-- id3lib
|-- lame
|-- libaacs
|-- libass
|-- libavc1394
|-- libbluray
|-- libcdaudio
|-- libcuefile
|-- libdc1394
|-- libdca
|-- libdv
|-- libdvdcss
|-- libdvdnav
|-- libiec61883
|-- libkate
|-- libmms
|-- libmodplug
|-- libmp4v2
|-- libmpeg2
|-- libmusicbrainz
|-- libmusicbrainz3
|-- libquicktime
|-- libreplaygain
|-- libshout
|-- libvpx
|-- live555
|-- lsdvd
|-- mjpegtools
|-- mlt
|-- mplayer-codecs
|-- musepack-tools
|-- ogmtools
|-- OpenAL
|-- opencore-amr
|-- openjpeg
|-- rtmpdump
|-- schroedinger
|-- soundtouch
|-- speex
|-- subtitleripper
|-- transcode
|-- twolame
|-- vcdimager
|-- x264
|-- xvid4conf
`-- xvidcore

N
`-- fping

PROFILE
|-- user-settings-console