@@ -1,0 +1,12 @@
+      |-----handy-ruler------------------------------------------------------|
+podofo: podofo (a library to work with the PDF file format)
+podofo:
+podofo: The PoDoFo library is a free, portable C++ library which includes
+podofo: classes to parse PDF files and  modify their contents into memory.
+podofo: The parser can also be used to extract information from a PDF file
+podofo: (for example, the parser could be used in a PDF viewer).
+podofo:
+podofo:
+podofo: 
+podofo:
+podofo: Package created by Niki Kovacs <info@microlinux.fr>
