@@ -1,0 +1,12 @@
+       |-----handy-ruler------------------------------------------------------|
+scribus: scribus (open-source professional page layout program)
+scribus:
+scribus: Scribus is an open-source program that brings award-winning
+scribus: professional page layout to Linux/Unix, MacOS X and Windows
+scribus: desktops with a combination of "press-ready" output and new
+scribus: approaches to page layout.
+scribus:
+scribus:
+scribus:
+scribus:
+scribus: Package created by Niki Kovacs <info@microlinux.fr>
